welcome.lessons.welcome.bat.bool2.TeaParty.scala.error
teaParty:1: error: type mismatch;
 found   : Unit
 required: Int
def teaParty(tea:Int, candy:Int): Int = {
                                        ^